--- a/src/assets/i18n/pt-BR.json
+++ b/src/assets/i18n/pt-BR.json
@@ -3,13 +3,15 @@
     "title": "Detetive - Planilha",
     "clear-all": "Limpar tudo",
     "roll-dice": "Rolar Dados",
-    "suspect": "Suspeito",
-    "weapon": "Arma",
-    "room": "Aposento",
+    "suspect": "Suspeitos",
+    "weapon": "Armas",
+    "room": "Cômodos",
     "language": "Idioma"
   },
   "dice-roller": {
-    "title": "Rolador de Dados"
+    "title": "Rolador de Dados",
+    "dice": "Dado",
+    "total": "Total"
   },
   "confirmation-dialog": {
     "title": "Limpar Tudo",
@@ -17,5 +19,32 @@
     "confirmation-text": "Esta operação irá limpar sua ficha. Isso não poderá ser desfeito.",
     "cancel": "Cancelar",
     "confirm": "Limpar tudo"
+  },
+  "suspects": {
+    "red": "Srta. Scarlet",
+    "yellow": "Cel. Mustard",
+    "white": "Sra. White",
+    "green": "Rev. Green",
+    "blue": "Sra. Peacock",
+    "purple": "Prof. Plum"
+  },
+  "weapons": {
+    "candlestick": "Castiçal",
+    "knife": "Faca",
+    "lead-pipe": "Cano de Chumbo",
+    "revolver": "Revólver",
+    "rope": "Corda",
+    "wrench": "Chave Inglesa"
+  },
+  "rooms": {
+    "hall": "Entrada",
+    "lounge": "Sala de Estar",
+    "dining-room": "Sala de Jantar",
+    "kitchen": "Cozinha",
+    "ballroom": "Sala de Música",
+    "conservatory": "Jardim de Inverno",
+    "billiard-room": "Salão de Jogos",
+    "library": "Biblioteca",
+    "study": "Escritório"
   }
 }
